--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,8 +8,13 @@ $fa-font-path: '../webfonts';
 
 @import 'bootstrap/scss/bootstrap';
 
-
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: 'Roboto', sans-serif;
+    
 }
