--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,5 +16,16 @@ $fa-font-path: '../webfonts';
 
 body {
     font-family: 'Roboto', sans-serif;
-    
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(0, 74, 173); 
+    border-radius: 10px;
+  }
+  
