change color of all project

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,7 +28,7 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: rgba(245, 245, 220, 1);
+  background-color: black;
 }
 
 ul li{
