change color of header

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -43,6 +43,6 @@ ul li{
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(0, 74, 173);
+  background: white;
   border-radius: 10px;
 }
