--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -30,7 +30,7 @@ html {
 
 body {
   font-family:  "Outfit", serif;
-  background-color: black;
+  background: linear-gradient(to left, rgb(0, 74, 173), transparent);
 }
 
 ul li{
@@ -41,6 +41,11 @@ ul li{
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
+}
+
+/* Track*/
+::-webkit-scrollbar-track {
+  background: rgb(0, 74, 173);
 }
 
 /* Handle */
