delete wrapper section and add link to header

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -30,7 +30,8 @@ html {
 
 body {
   font-family:  "Outfit", serif;
-  background: linear-gradient(to left, rgb(0, 74, 173), transparent);
+  background: linear-gradient(to left, rgb(0, 74, 173), rgb(116, 157, 235));
+
 }
 
 ul li{
